Switching to edit mode on boolean object runs out of memory #79604

Closed
opened 2020-08-06 22:54:06 +02:00 by Robert Guetzkow · 10 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.30

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-06 17:52, hash: 9a1ff4445b
Worked: 2.83.4
Caused by deaff945d0

Short description of error
Switching to edit mode on an object that is used as target in a boolean modifier exceeds all available memory. This is a regression and can be reproduced with two cubes.

It seems this only affects debug builds.

Exact steps for others to reproduce the error

  1. Duplicate the default cube
  2. Add a boolean modifier to the original cube
  3. Select the duplicated cube as target in the modifier
  4. Select the duplicated cube and switch to edit mode
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.30 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-06 17:52, hash: `9a1ff4445b` Worked: 2.83.4 Caused by deaff945d0 **Short description of error** Switching to edit mode on an object that is used as target in a boolean modifier exceeds all available memory. This is a regression and can be reproduced with two cubes. *It seems this only affects debug builds.* **Exact steps for others to reproduce the error** 1. Duplicate the default cube 2. Add a boolean modifier to the original cube 3. Select the duplicated cube as target in the modifier 4. Select the duplicated cube and switch to edit mode
Author
Member

Added subscriber: @rjg

Added subscriber: @rjg

#78299 was marked as duplicate of this issue

#78299 was marked as duplicate of this issue
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Author
Member

I've just checked, release builds don't have this issue. I'm not sure and haven't investigated if this problem is really just limited to debug builds or somethings masks the underlying bug in release builds (e.g. UB, optimization, threading).

I've just checked, release builds don't have this issue. I'm not sure and haven't investigated if this problem is really just limited to debug builds or somethings masks the underlying bug in release builds (e.g. UB, optimization, threading).
Member

Added subscribers: @ideasman42, @lichtwerk

Added subscribers: @ideasman42, @lichtwerk
Member

Can confirm, also caused by deaff945d0

CC @ideasman42

Can confirm, also caused by deaff945d0 CC @ideasman42

This issue was referenced by 8fa42f0bd4

This issue was referenced by 8fa42f0bd4e84b49fbba64df771bf63da5b6477d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2020-08-07 17:08:38 +02:00
Added subscribers: @impacman, @SpectreFirst, @ThatAsherGuy, @youthatninja, @Alaska, @iss
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79604
No description provided.