Fix T79604: Switching to edit mode on boolean object runs out of memory.

Note that this is a dummy safe fix for now, far from optimal.